Bonus/Mallia-lb-cf.yml
AWSTemplateFormatVersion: 2010-09-09
Description: >-
   Creates 2 instances and 1 VPC.  Each instance gets a private IPon it's subnet and installs required software before logon.  The proxy server gets a public IP as does a NAT gateway.  The backend servers use the NAT gateway for world communications, but they do not have individual public IPs.
Parameters:
  KeyName:
    Description: Name of an existing EC2 KeyPair to enable SSH access to the instance
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair.
  ServerKey:
    Description: Name of an existing EC2 KeyPair for use of accessing the private server instances
    Type: 'AWS::EC2::KeyPair::KeyName'
    ConstraintDescription: must be the name of an existing EC2 KeyPair
Mappings:
  AWSRegionAMI: # AMI for Ubuntu server in each supported region 
    us-east-1:   # N. Virginia
      HVM64: ami-02dfbd4ff395f2a1b # Amazon Linux (ec2-user) dnf
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 192.168.0.0/23 # VPC CIDR block
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-VPC

  # -------------- #
  # Public Subnet: #
  # -------------- #
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.0.0/24 # 192.168.0.0 - 192.168.0.255
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-public-subnet

  # --------------- #
  # Private Subnet: #
  # --------------- #
  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      VpcId: !Ref VPC
      CidrBlock: 192.168.1.0/24 # 192.168.1.0 - 192.168.1.255
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-private-subnet

  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-ig

  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-public-rt

  PublicRouteToIG:
    Type: 'AWS::EC2::Route'
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable

  NATIPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc

  NATGateway:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId: !GetAtt 'NATIPAddress.AllocationId' #!Ref NATIPAddress
      ConnectivityType: public
      SubnetId: !Ref PublicSubnet
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-natgw

  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: LB-private-rt

  PrivateRouteToNAT:
    Type: 'AWS::EC2::Route'
    DependsOn: NATGateway
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref NATGateway

  PrivateSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable

  ProxyIPAddress:
    Type: 'AWS::EC2::EIP'
    DependsOn: AttachGateway
    Properties:
      Domain: vpc
      InstanceId: !Ref ProxyInstance

  ProxySG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access from trusted sources.  Port 80 or 443 access from appropraite sources
      SecurityGroupIngress:
        # Allow SSH in VPC
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 192.168.0.0/23 # VPC Cidr

        # Allow SSH from WSU
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 130.108.0.0/16  # WSU CIDR

        # Allow SSH from home
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 174.101.81.126/32 # Home IP

        # Allow HTTP from VPC
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 192.168.0.0/23 # VPC Cidr

        # Allow HTTP from any IP
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

        # Allow ICMP within VPC
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 192.168.0.0/23 # VPC Cidr

        # Allow ICMP from Home
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: 174.101.81.126/32 # Home IP

                # Allow Webhook
        - IpProtocol: tcp
          FromPort: '9000'
          ToPort: '9000'
          CidrIp: 0.0.0.0/0 # Allow webhook from anywhere

      Tags: 
        - Key: Name
          Value: LB-sg

  ServerSG:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      VpcId: !Ref VPC
      GroupDescription: Enable SSH access from trusted sources.  Port 80 or 443 access from appropraite sources
      SecurityGroupIngress:
        # Allow SSH in VPC
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 192.168.0.0/23 # VPC Cidr

        # Allow Http within VPC
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 192.168.0.0/23 # VPC Cidr

      Tags: 
        - Key: Name
          Value: LB-sg

  ProxyInstance:
    Type: 'AWS::EC2::Instance'
    DependsOn: 
    - PublicRouteToIG
    - WebServ1Instance
    - WebServ2Instance
    - WebServ3Instance
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref KeyName
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: proxy
      NetworkInterfaces:
        - GroupSet:
            - !Ref ProxySG
          DeviceIndex: '0'
          DeleteOnTermination: true
          SubnetId: !Ref PublicSubnet
          PrivateIpAddress: 192.168.0.100 
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            dnf update
            dnf install haproxy -y
            echo "${WebServ1Instance.PrivateIp} WebServ1" >> /etc/hosts
            echo "${WebServ2Instance.PrivateIp} WebServ2" >> /etc/hosts
            echo "${WebServ3Instance.PrivateIp} WebServ3" >> /etc/hosts
            wget -O /etc/haproxy/haproxy.cfg https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/Bonus/Bonus/haproxy.cfg
            wget -O /home/ec2-user/.ssh/config https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/Bonus/Bonus/ssh_config
            chmod 600 /home/ec2-user/.ssh/config && chown ec2-user:ec2-user /home/ec2-user/.ssh/config
            systemctl start haproxy && systemctl enable haproxy
            hostnamectl set-hostname proxy
            wget https://github.com/adnanh/webhook/releases/download/2.8.3/webhook-linux-amd64.tar.gz
            tar -xzf webhook-linux-amd64.tar.gz
            mv webhook-linux-amd64/webhook /usr/local/bin/
            chmod +x /usr/local/bin/webhook
            mkdir /var/webhook
            wget -O /usr/local/bin/updateServers https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/Bonus/Bonus/updateServers.sh
            chmod +x /usr/local/bin/updateServers
            wget -O /home/ec2-user/hooks.json https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/Bonus/Bonus/UpdatedHooks.json
            chmod 600 /home/ec2-user/hooks.json && chown ec2-user:ec2-user /home/ec2-user/hooks.json
            wget -O /etc/systemd/system/webhook.service https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/main/deployment/web-hook.service
            systemctl daemon-reload
            systemctl start webhook && systemctl enable webhook
            reboot

  WebServ1Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: NATGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref ServerKey
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: webserv1

      NetworkInterfaces:
        - GroupSet:
            - !Ref ServerSG
          AssociatePublicIpAddress: false
          DeviceIndex: '0'
          DeleteOnTermination: true
          SubnetId: !Ref PrivateSubnet
          PrivateIpAddress: 192.168.1.50

      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            dnf update
            dnf install -y docker
            systemctl start docker && systemctl enable docker
            hostnamectl set-hostname WebServ1
            docker pull malliasm/portfolio
            docker run -d --restart=always -p 80:80 --name portfolio malliasm/portfolio
            wget -O /usr/local/bin/DockerSwap https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/main/deployment/DockerSwap.sh
            chmod +x /usr/local/bin/DockerSwap
            usermod -aG docker ec2-user
            reboot

  WebServ2Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: NATGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref ServerKey
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: webserv2

      NetworkInterfaces:
        - GroupSet:
            - !Ref ServerSG
          AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PrivateSubnet
          PrivateIpAddress: 192.168.1.100

      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            dnf update
            dnf install -y docker
            systemctl start docker && systemctl enable docker
            hostnamectl set-hostname WebServ2
            docker pull malliasm/portfolio
            docker run -d --restart=always -p 80:80 --name portfolio malliasm/portfolio
            wget -O /usr/local/bin/DockerSwap https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/main/deployment/DockerSwap.sh
            chmod +x /usr/local/bin/DockerSwap
            usermod -aG docker ec2-user
            reboot


  WebServ3Instance:
    Type: 'AWS::EC2::Instance'
    DependsOn: NATGateway
    Properties:
      ImageId: !FindInMap [AWSRegionAMI, !Ref "AWS::Region", HVM64]
      InstanceType: t2.micro
      KeyName: !Ref ServerKey
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackId'
        - Key: Name
          Value: webserv3

      NetworkInterfaces:
        - GroupSet:
            - !Ref ServerSG
          AssociatePublicIpAddress: 'false'
          DeviceIndex: '0'
          DeleteOnTermination: 'true'
          SubnetId: !Ref PrivateSubnet
          PrivateIpAddress: 192.168.1.200

      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            dnf update
            dnf install -y docker
            systemctl start docker && systemctl enable docker
            hostnamectl set-hostname WebServ3
            docker pull malliasm/portfolio
            docker run -d --restart=always -p 80:80 --name portfolio malliasm/portfolio
            wget -O /usr/local/bin/DockerSwap https://raw.githubusercontent.com/WSU-kduncan/ceg3120-cicd-Mizeress/refs/heads/main/deployment/DockerSwap.sh
            chmod +x /usr/local/bin/DockerSwap
            usermod -aG docker ec2-user
            reboot
